crates/rolldown_utils/tests/ui/pass_harness/fail_unwrap_sealed.rs
use rolldown_utils::pass::Sealed;

fn unwrap(sealed: Sealed<u32>) -> u32 {
  sealed.into_inner()
}

fn main() {}
